--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -1,3 +1,6 @@
+	
+		
+	
 
 <div class="row" >
 	<div class="col-lg-12">
@@ -14,6 +17,13 @@
 				<li class="active">{{procedimientoSeleccionado.denominacion}}</li>
 				<li class="active">{{anualidad}}</li>
 			</ol>
+			<nav>
+			  <ul class="pager" ng-if="procedimientoSeleccionado.periodos[anualidad]" >	
+				<li ng-if="!!procedimientoSeleccionado.periodos[getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos[getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
+			  </ul>
+			</nav>
+
 			<div class="col-lg-6">
 				<ul>
 					<li ng-repeat="attr in attrspar">
@@ -22,11 +32,13 @@
 						<a ng-if="$root.permisoscalculados.superuser" href="#" onaftersave="recalculate()" editable-text="procedimientoSeleccionado[attr]">{{procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr] : '-' }}</a>
 						<span ng-if="!$root.permisoscalculados.superuser" >{{ procedimientoSeleccionado[attr]!=null ?procedimientoSeleccionado[attr]  : '-' }}</span>
 					</li>
-					<li ng-repeat="attr in attrsanualidad">
-						<strong>{{attr| translate}}</strong>
-						<span>&nbsp;</span>
-						<a href="#" ng-if="W" onaftersave="recalculate()" editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
-						<span ng-if="!W" >{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
+					<li ng-repeat="attr in attrsanualidad" ng-show="exists(attr)">
+						<div >
+							<strong>{{attr| translate}}</strong>
+							<span>&nbsp;</span>
+							<a href="#" ng-if="W" onaftersave="recalculate()"  editable-text="procedimientoSeleccionado.periodos[anualidad][attr]">{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] :  '-' }}</a>
+							<span ng-if="!W" >{{ procedimientoSeleccionado.periodos[anualidad][attr]!=null ? procedimientoSeleccionado.periodos[anualidad][attr] : '-' }}</span>
+						</div>
 					</li>
 				</ul>
 				<div class="panel panel-danger">
@@ -80,6 +92,12 @@
 				</div>
 			</div>
 			<div style="clear:both" class="table-responsive">
+			<nav>
+			  <ul class="pager" ng-if="procedimientoSeleccionado.periodos[anualidad]" >	
+				<li ng-if="!!procedimientoSeleccionado.periodos[getPrev()]" class="previous" ><a ng-click="prevYear()" href="" ><span aria-hidden="true">&larr;</span> {{getPrev()}}</a></li>
+				<li ng-if="!!procedimientoSeleccionado.periodos[getNext()]" class="next" ><a ng-click="nextYear()" href="" >{{getNext()}} <span aria-hidden="true">&rarr;</span></a></li>
+			  </ul>
+			</nav>
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
@@ -88,7 +106,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="attr in attrstabla"> 
+						<tr ng-repeat="attr in attrstabla" ng-show="exists(attr)"> 
 							<th>{{attr | translate}}</th>
 							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" class="numberCell">
 
@@ -98,7 +116,7 @@
 								<span ng-if="!W || procedimientoSeleccionado.periodos[anualidad].periodoscerrados[$index]!=0">{{ procedimientoSeleccionado.periodos[anualidad][attr][$index] || 0  |numberFormat}}</span>
 							</td>
 						</tr>
-						<tr ng-repeat="attr in attrstablacalculados"> 
+						<tr ng-repeat="attr in attrstablacalculados" ng-show="exists(attr)"> 
 							<th>{{attr | translate}}</th>
 							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">{{val | numberFormat}}</td>
 						</tr>
