--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -239,9 +239,9 @@
 				<tr>
 					<th colspan="{{ !is_show_recursive_users && !procedimientos.length ? 7 : 8 }}">
 						<div class="btn-group pull-right">
-							<button ng-class="{}" class="btn btn-default" ng-click="searchUser()" title="Buscar los permisos de un usuario o plaza">
+							<!--<button ng-class="{}" class="btn btn-default" ng-click="searchUser()" title="Buscar los permisos de un usuario o plaza">
 								<span class="glyphicon glyphicon-search"></span>
-							</button>								
+							</button>-->								
 							<button ng-class="{}" class="btn btn-default" ng-click="addPermiso()" title="Añadir permiso sobre la jerarquía seleccionada">
 								<span class="glyphicon glyphicon-plus"></span>
 							</button>								
@@ -309,7 +309,7 @@
 							<input type="hidden" name="nodojerarquia" value="{{seleccionado.id || 0}}" />
 							<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />		
 							<br/>							
-							<label for="permisoallogin" ng-if="!seleccionado_organica && procedimiento_seleccionado">
+							<label for="permisoallogin" >
 								<input type="checkbox" ng-model="permisoallogin" name="permisoallogin" ng-disabled="!usuarioseleccionado" value="1"/> Asignar permiso al login y no a la plaza
 							</label>														
 							<div ng-if="$root.permisoscalculados.superuser">
