--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -412,7 +412,7 @@
 						<span style="font-size:smaller" class="badge alert-warning" ng-if="!procedimiento.responsables  && procedimiento.cod_plaza"><i>No disponible</i></span>
 					</td>
 					<td>{{procedimiento.cod_plaza}}</td>
-					<td><a href="/admin/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
+					<td><a href="/procedimiento/{{procedimiento.codigo}}" title="{{procedimiento.codigo}}">[{{procedimiento.codigo}}] <span class="visible-lg visible-md">{{procedimiento.denominacion}}</span></a></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>
 					<td><span class="glyphicon glyphicon-ok gray"></span></td>					
